sort.basic.insertion.AlgInsertionSort.scala.error
Compilation error:
AlgInsertionSort:12: error: value !=- is not a member of Int
    while((h==0) && ((i+k)!=-1)){
                          ^